<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".Activities.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="32dp"
            tools:context=".activities.LoginActivity">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/tv_register"
                android:textColor="@color/font"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                style="@style/Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <EditText
                    android:id="@+id/nik"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/bg_form_register"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/nik"
                    android:maxLength="30"
                    android:inputType="number"
                    android:paddingStart="24dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/bg"
                    android:textColorHint="@color/register"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/nama"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/bg_form_register"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/nama_lengkap"
                    android:maxLength="30"
                    android:inputType="text"
                    android:paddingStart="24dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/bg"
                    android:textColorHint="@color/register"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/bg_form_register"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/username"
                    android:maxLength="20"
                    android:inputType="text"
                    android:paddingStart="24dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/bg"
                    android:textColorHint="@color/register"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="12dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:background="@drawable/bg_form_register"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <RadioGroup
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:orientation="horizontal"
                                android:id="@+id/radio">

                            <RadioButton
                                android:id="@+id/rbPria"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingStart="4dp"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="48dp"
                                android:buttonTint="@color/bg"
                                android:text="@string/laki_laki"
                                android:textColor="@color/register"
                                android:textSize="12sp" />

                                <RadioButton
                                    android:id="@+id/rbPerempuan"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingStart="4dp"
                                    android:layout_marginEnd="32dp"
                                    android:buttonTint="@color/bg"
                                    android:text="@string/perempuan"
                                    android:textColor="@color/register"
                                    android:textSize="12sp" />

                            </RadioGroup>

                        </LinearLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/bg_form_register"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/email"
                    android:maxLength="30"
                    android:inputType="textEmailAddress"
                    android:paddingStart="24dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/bg"
                    android:textColorHint="@color/register"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/alamat"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/bg_form_register"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/alamat"
                    android:maxLength="30"
                    android:inputType="text"
                    android:paddingStart="24dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/bg"
                    android:textColorHint="@color/register"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/pendidikan"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/bg_form_register"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/pendidikan"
                    android:maxLength="30"
                    android:inputType="text"
                    android:paddingStart="24dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/bg"
                    android:textColorHint="@color/register"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/nohp"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/bg_form_register"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/nomor_handphone"
                    android:inputType="number"
                    android:maxLength="15"
                    android:paddingStart="24dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/bg"
                    android:textColorHint="@color/register"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/bg_form_register"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/tvDate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:layout_marginStart="24dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/hh_bb_tttt"
                        android:textSize="12sp" />

                </LinearLayout>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/bg_form_register"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/password"
                    android:maxLength="25"
                    android:inputType="textPassword"
                    android:paddingStart="24dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/bg"
                    android:textColorHint="@color/register"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/konfirmasi_password"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/bg_form_register"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/konfirmasi_password"
                    android:maxLength="25"
                    android:inputType="textPassword"
                    android:paddingStart="24dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/bg"
                    android:textColorHint="@color/register"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_btn_login"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/daftar"
                    android:textColor="@color/font"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/sudah_punya_akun"
                    android:textColor="@color/font"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/silahkan_login"
                    android:textColor="@color/font"
                    android:textSize="14sp" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>