<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".Activities.EditProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="32dp"
            tools:context=".activities.LoginActivity">

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="15dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:text="Edit Profil"
            android:textColor="@color/font"
            android:textSize="18sp"
            android:fontFamily="@font/roboto_bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_save"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_confirm" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Style"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nik"
                android:layout_marginStart="24dp"
                android:textColor="@color/register"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/etnik"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_form_register"
                android:fontFamily="@font/roboto"
                android:layout_marginTop="12dp"
                android:hint="@string/nik"
                android:inputType="number"
                android:paddingStart="24dp"
                android:paddingEnd="16dp"
                android:textColor="@color/bg"
                android:textColorHint="@color/register"
                android:textSize="12sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_lengkap"
                android:layout_marginStart="24dp"
                android:textColor="@color/font"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/etnama"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_form_register"
                android:fontFamily="@font/roboto"
                android:layout_marginTop="12dp"
                android:hint="@string/nama_lengkap"
                android:inputType="text"
                android:paddingStart="24dp"
                android:paddingEnd="16dp"
                android:textColor="@color/bg"
                android:textColorHint="@color/register"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:layout_marginStart="24dp"
                android:textColor="@color/register"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/etusername"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_form_register"
                android:fontFamily="@font/roboto"
                android:layout_marginTop="12dp"
                android:hint="@string/username"
                android:inputType="number"
                android:paddingStart="24dp"
                android:paddingEnd="16dp"
                android:textColor="@color/bg"
                android:textColorHint="@color/register"
                android:textSize="12sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jenis_kelamin"
                android:layout_marginStart="24dp"
                android:textColor="@color/register"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/etjeniskelamin"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_form_register"
                android:fontFamily="@font/roboto"
                android:layout_marginTop="12dp"
                android:hint="@string/laki_laki"
                android:inputType="number"
                android:paddingStart="24dp"
                android:paddingEnd="16dp"
                android:textColor="@color/bg"
                android:textColorHint="@color/register"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginStart="24dp"
                android:textColor="@color/font"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/etemail"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_form_register"
                android:fontFamily="@font/roboto"
                android:layout_marginTop="12dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="24dp"
                android:paddingEnd="16dp"
                android:textColor="@color/bg"
                android:textColorHint="@color/register"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alamat"
                android:layout_marginStart="24dp"
                android:textColor="@color/font"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/etalamat"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_form_register"
                android:fontFamily="@font/roboto"
                android:layout_marginTop="12dp"
                android:hint="@string/alamat"
                android:inputType="text"
                android:paddingStart="24dp"
                android:paddingEnd="16dp"
                android:textColor="@color/bg"
                android:textColorHint="@color/register"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pendidikan"
                android:layout_marginStart="24dp"
                android:textColor="@color/font"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/etpendidikan"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_form_register"
                android:fontFamily="@font/roboto"
                android:layout_marginTop="12dp"
                android:hint="@string/pendidikan"
                android:inputType="text"
                android:paddingStart="24dp"
                android:paddingEnd="16dp"
                android:textColor="@color/bg"
                android:textColorHint="@color/register"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nomor_handphone"
                android:layout_marginStart="24dp"
                android:textColor="@color/font"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/etnohp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_form_register"
                android:fontFamily="@font/roboto"
                android:layout_marginTop="12dp"
                android:hint="@string/nomor_handphone"
                android:inputType="number"
                android:paddingStart="24dp"
                android:paddingEnd="16dp"
                android:textColor="@color/bg"
                android:textColorHint="@color/register"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tanggal_lahir"
                android:layout_marginStart="24dp"
                android:textColor="@color/register"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/etdate"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_form_register"
                android:fontFamily="@font/roboto"
                android:layout_marginTop="12dp"
                android:hint="@string/tanggal_lahir"
                android:inputType="number"
                android:paddingStart="24dp"
                android:paddingEnd="16dp"
                android:textColor="@color/bg"
                android:textColorHint="@color/register"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:layout_marginStart="24dp"
                android:textColor="@color/font"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/etpassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_form_register"
                android:fontFamily="@font/roboto"
                android:layout_marginTop="12dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="24dp"
                android:paddingEnd="16dp"
                android:textColor="@color/bg"
                android:textColorHint="@color/register"
                android:textSize="12sp" />

        </LinearLayout>


    </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>